--- a/OutCode.V9E/OutCode.Entities/OutCode.Interop.csproj
+++ b/OutCode.V9E/OutCode.Entities/OutCode.Interop.csproj
@@ -34,7 +34,7 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>OUTCODEINTEROP.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>devkey.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -53,7 +53,7 @@
     <Compile Include="Resources.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="OUTCODEINTEROP.pfx" />
+    <None Include="devkey.pfx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
