--- a/OutCode.V9E/OutCode.Net/OutCode.Net.csproj
+++ b/OutCode.V9E/OutCode.Net/OutCode.Net.csproj
@@ -29,6 +29,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>devkey.pfx</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -63,6 +69,9 @@
     <Compile Include="TCPClient.cs" />
     <Compile Include="TCPConnection.cs" />
     <Compile Include="TCPServer.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="devkey.pfx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
