--- a/OutCode.V9E/OutCode.Helpers/OutCode.Helpers.csproj
+++ b/OutCode.V9E/OutCode.Helpers/OutCode.Helpers.csproj
@@ -7,9 +7,9 @@
     <ProjectGuid>{E230BB9C-C62B-48C9-A74E-FDA04F5718ED}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OutCode.Helpers</RootNamespace>
-    <AssemblyName>OutCode.Helpers</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <RootNamespace>OutCode.Extensions</RootNamespace>
+    <AssemblyName>OutCode.Extensions</AssemblyName>
+    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -34,7 +34,7 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>devkey.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>DevKey2019.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="devkey.pfx" />
+    <None Include="devkey2019.pfx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
