--- a/OutCode.V9E/OutCode.V9E.Entities/OutCode.V9E.Interfaces.csproj
+++ b/OutCode.V9E/OutCode.V9E.Entities/OutCode.V9E.Interfaces.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>OutCode.V9E.Interfaces</RootNamespace>
     <AssemblyName>OutCode.V9E.Interfaces</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
